--- a/branches/branch-playground/sim/simtests.vcproj
+++ b/branches/branch-playground/sim/simtests.vcproj
@@ -52,7 +52,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=" /Zm1000 -wd4661"
 				Optimization="0"
 				InlineFunctionExpansion="0"
 				PreprocessorDefinitions="WIN32,_WINDOWS,_DEBUG,QT_DLL,QT3_SUPPORT,QT_3SUPPORT_LIB,QT_UITOOLS_LIB,QT_PHONON_LIB,QT_GUI_LIB,QT_TEST_LIB,QT_XML_LIB,QT_NETWORK_LIB,QT_CORE_LIB,QT3_SUPPORT_WARNINGS,QT_DLL,HAVE_CONFIG_H,_CRT_SECURE_NO_DEPRECATE,_CRT_NONSTDC_NO_DEPRECATE,UNICODE,NOUNCRYPT,QT_DEBUG,CMAKE_INTDIR=\&quot;Debug\&quot;"
@@ -79,8 +78,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions=" /STACK:10000000 /machine:I386 /debug"
-				AdditionalDependencies="kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib ..\Debug\sim.lib $(QTDIR)\lib\Qt3Supportd4.lib $(QTDIR)\lib\QtUiToolsd.lib $(QTDIR)\lib\phonond4.lib $(QTDIR)\lib\QtGuid4.lib imm32.lib winmm.lib $(QTDIR)\lib\QtTestd4.lib $(QTDIR)\lib\QtXmld4.lib $(QTDIR)\lib\QtSqld4.lib $(QTDIR)\lib\QtNetworkd4.lib $(QTDIR)\lib\QtCored4.lib ws2_32.lib C:\libraries\OpenSSL\lib\VC\ssleay32MDd.lib C:\libraries\OpenSSL\lib\VC\libeay32MDd.lib wsock32.lib wininet.lib C:\libraries\libxml2-2.6.24.win32\lib\libxml2.lib C:\libraries\libxslt-1.1.16.win32\lib\libxslt.lib C:\libraries\mysql\lib_release\zlib.lib C:\libraries\iconv-1.9.2.win32\lib\iconv.lib $(NOINHERIT)"
+				AdditionalDependencies="kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib $(TargetDir)\sim.lib $(QTDIR)\lib\Qt3Supportd4.lib $(QTDIR)\lib\QtUiToolsd.lib $(QTDIR)\lib\phonond4.lib $(QTDIR)\lib\QtGuid4.lib imm32.lib winmm.lib $(QTDIR)\lib\QtTestd4.lib $(QTDIR)\lib\QtXmld4.lib $(QTDIR)\lib\QtSqld4.lib $(QTDIR)\lib\QtNetworkd4.lib $(QTDIR)\lib\QtCored4.lib ws2_32.lib C:\libraries\OpenSSL\lib\VC\ssleay32MDd.lib C:\libraries\OpenSSL\lib\VC\libeay32MDd.lib wsock32.lib wininet.lib C:\libraries\libxml2-2.6.24.win32\lib\libxml2.lib C:\libraries\libxslt-1.1.16.win32\lib\libxslt.lib C:\libraries\mysql\lib_release\zlib.lib C:\libraries\iconv-1.9.2.win32\lib\iconv.lib $(NOINHERIT)"
 				OutputFile="$(SolutionDir)\Debug\test.exe"
 				Version="0.0"
 				LinkIncremental="2"
@@ -152,7 +150,6 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=" /Zm1000 -wd4661"
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				PreprocessorDefinitions="WIN32,_WINDOWS,NDEBUG,QT_DLL,QT3_SUPPORT,QT_3SUPPORT_LIB,QT_UITOOLS_LIB,QT_PHONON_LIB,QT_GUI_LIB,QT_TEST_LIB,QT_XML_LIB,QT_NETWORK_LIB,QT_CORE_LIB,QT3_SUPPORT_WARNINGS,QT_DLL,HAVE_CONFIG_H,_CRT_SECURE_NO_DEPRECATE,_CRT_NONSTDC_NO_DEPRECATE,UNICODE,NOUNCRYPT,QT_NO_DEBUG,CMAKE_INTDIR=\&quot;Release\&quot;"
@@ -177,8 +174,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions=" /STACK:10000000 /machine:I386"
-				AdditionalDependencies="$(NOINHERIT) kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib  ..\Release\simlib.lib $(QTDIR)\lib\Qt3Support4.lib $(QTDIR)\lib\QtUiTools.lib $(QTDIR)\lib\phonon4.lib $(QTDIR)\lib\QtGui4.lib imm32.lib winmm.lib $(QTDIR)\lib\QtTest4.lib $(QTDIR)\lib\QtXml4.lib $(QTDIR)\lib\QtSql4.lib $(QTDIR)\lib\QtNetwork4.lib $(QTDIR)\lib\QtCore4.lib ws2_32.lib C:\libraries\OpenSSL\lib\VC\ssleay32MD.lib C:\libraries\OpenSSL\lib\VC\libeay32MD.lib wsock32.lib wininet.lib $(QTDIR)\lib\Qt3Support4.lib $(QTDIR)\lib\QtUiTools.lib $(QTDIR)\lib\phonon4.lib $(QTDIR)\lib\QtGui4.lib imm32.lib winmm.lib $(QTDIR)\lib\QtTest4.lib $(QTDIR)\lib\QtXml4.lib $(QTDIR)\lib\QtSql4.lib $(QTDIR)\lib\QtNetwork4.lib $(QTDIR)\lib\QtCore4.lib ws2_32.lib C:\libraries\libxml2-2.6.24.win32\lib\libxml2.lib C:\libraries\libxslt-1.1.16.win32\lib\libxslt.lib C:\libraries\mysql\lib_release\zlib.lib C:\libraries\iconv-1.9.2.win32\lib\iconv.lib "
+				AdditionalDependencies="kernel32.lib user32.lib gdi32.lib winspool.lib shell32.lib ole32.lib oleaut32.lib uuid.lib comdlg32.lib advapi32.lib $(TargetDir)\sim.lib $(QTDIR)\lib\Qt3Support4.lib $(QTDIR)\lib\QtUiTools.lib $(QTDIR)\lib\phonon4.lib $(QTDIR)\lib\QtGui4.lib imm32.lib winmm.lib $(QTDIR)\lib\QtTest4.lib $(QTDIR)\lib\QtXml4.lib $(QTDIR)\lib\QtSql4.lib $(QTDIR)\lib\QtNetwork4.lib $(QTDIR)\lib\QtCore4.lib ws2_32.lib C:\libraries\OpenSSL\lib\VC\ssleay32MD.lib C:\libraries\OpenSSL\lib\VC\libeay32MD.lib wsock32.lib wininet.lib C:\libraries\libxml2-2.6.24.win32\lib\libxml2.lib C:\libraries\libxslt-1.1.16.win32\lib\libxslt.lib C:\libraries\mysql\lib_release\zlib.lib C:\libraries\iconv-1.9.2.win32\lib\iconv.lib $(NOINHERIT)"
 				OutputFile="$(SolutionDir)\Release\test.exe"
 				Version="0.0"
 				LinkIncremental="1"
@@ -457,12 +453,76 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\tests\testclientsocket.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalOptions="/U HAVE_CONFIG_H"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalOptions="/U HAVE_CONFIG_H"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\tests\testsocketfactory.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalOptions="/U HAVE_CONFIG_H"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						AdditionalOptions="/U HAVE_CONFIG_H"
+					/>
+				</FileConfiguration>
+			</File>
 			<Filter
 				Name="generated"
 				>
 				<File
 					RelativePath=".\tests\moc_testbuffer.cpp"
 					>
+				</File>
+				<File
+					RelativePath=".\tests\moc_testclientsocket.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AdditionalOptions="/U HAVE_CONFIG_H"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\tests\moc_testsocketfactory.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							AdditionalOptions="/U HAVE_CONFIG_H"
+						/>
+					</FileConfiguration>
 				</File>
 			</Filter>
 		</Filter>
@@ -471,6 +531,54 @@
 			>
 			<File
 				RelativePath=".\tests\testbuffer.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Moc&apos;ing $(InputName).h ..."
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
+						Outputs="$(InputDir)moc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Moc&apos;ing $(InputName).h ..."
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
+						Outputs="$(InputDir)moc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\tests\testclientsocket.h"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Moc&apos;ing $(InputName).h ..."
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						Outputs="$(InputDir)moc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Moc&apos;ing $(InputName).h ..."
+						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h"
+						Outputs="$(InputDir)moc_$(InputName).cpp"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\tests\testsocketfactory.h"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
