--- a/branches/branch-playground/plugins/_core/_core.vcproj
+++ b/branches/branch-playground/plugins/_core/_core.vcproj
@@ -622,28 +622,6 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="logindlg.cpp"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-			</File>
-			<File
 				RelativePath="maininfo.cpp"
 				>
 				<FileConfiguration
@@ -1452,10 +1430,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\moc_logindlg.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\moc_maininfo.cpp"
 					>
 				</File>
@@ -2008,30 +1982,6 @@
 			</File>
 			<File
 				RelativePath="interfacecfg.h"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
-						Outputs="$(InputDir)moc_$(InputName).cpp"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="Moc&apos;ing $(InputName).h ..."
-						CommandLine="%qtdir%\bin\moc.exe -o $(InputDir)moc_$(InputName).cpp $(InputDir)$(InputName).h&#x0D;&#x0A;"
-						Outputs="$(InputDir)moc_$(InputName).cpp"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="logindlg.h"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -2903,10 +2853,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\ui_logindlgbase.h"
-					>
-				</File>
-				<File
 					RelativePath=".\ui_maininfobase.h"
 					>
 				</File>
@@ -2997,7 +2943,7 @@
 		</Filter>
 		<Filter
 			Name="Interfaces"
-			Filter="ui"
+			Filter="*.ui"
 			>
 			<File
 				RelativePath="arcfgbase.ui"
@@ -3045,10 +2991,6 @@
 			</File>
 			<File
 				RelativePath="interfacecfgbase.ui"
-				>
-			</File>
-			<File
-				RelativePath="logindlgbase.ui"
 				>
 			</File>
 			<File
