* hm... strange, thought that i have fixed it...

--- a/branches/branch-playground/sim.vcproj
+++ b/branches/branch-playground/sim.vcproj
@@ -174,7 +174,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sim\win32\libxml.lib sim\win32\libxslt.lib sim\win32\libjpeg.lib sim\win32\libeay32MDd.lib sim\win32\ssleay32MDd.lib Qt3Supportd4.lib QtUiToolsd.lib QtGuid4.lib QtXmld4.lib QtSqld4.lib QtNetworkd4.lib QtCored4.lib Wininet.lib"
+				AdditionalDependencies="sim\win32\libxml.lib sim\win32\libxslt.lib sim\win32\libjpeg.lib sim\win32\libeay32MDd.lib sim\win32\ssleay32MDd.lib QtUiToolsd.lib QtGuid4.lib QtXmld4.lib QtSqld4.lib QtNetworkd4.lib QtCored4.lib Wininet.lib"
 				OutputFile=".\Debug/sim.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -544,6 +544,10 @@
 						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\sim\profile.cpp"
+				>
 			</File>
 			<File
 				RelativePath=".\sim\profilemanager.cpp"
@@ -935,6 +939,10 @@
 			</File>
 			<File
 				RelativePath=".\sim\plugins.h"
+				>
+			</File>
+			<File
+				RelativePath=".\sim\profile.h"
 				>
 			</File>
 			<File
@@ -1473,31 +1481,11 @@
 					Name="generated"
 					>
 					<File
-						RelativePath=".\sim\socket\moc_clientsocket.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\sim\socket\moc_clientsocketnotify.cpp"
-						>
-					</File>
-					<File
 						RelativePath=".\sim\socket\moc_interfacechecker.cpp"
 						>
 					</File>
 					<File
 						RelativePath=".\sim\socket\moc_ipresolver.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\sim\socket\moc_iresolver.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\sim\socket\moc_serversocket.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\sim\socket\moc_serversocketnotify.cpp"
 						>
 					</File>
 					<File
@@ -1517,19 +1505,7 @@
 						>
 					</File>
 					<File
-						RelativePath=".\sim\socket\moc_socket.cpp"
-						>
-					</File>
-					<File
 						RelativePath=".\sim\socket\moc_socketfactory.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\sim\socket\moc_socketnotify.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\sim\socket\moc_sslclient.cpp"
 						>
 					</File>
 					<File
